GWAS data preprocessing and finding significant snps

--- a/final.Rmd
+++ b/final.Rmd
@@ -1,56 +1,65 @@
 
-```{r gwas}
+```{r gwas and signif_snps}
 install.packages("data.table")
-install.packages("R.utils")
+#install.packages("R.utils")
 library(data.table)
-library(R.utils)
+#library(R.utils)
 file_path <- "/Users/wqy/Downloads/GCST90454344.tsv"
-expression_data <- fread(file_path, sep = "\t", header = TRUE)
-# 
-str(expression_data)
-head(expression_data)
-colnames(expression_data)
-#map the base_pair_location and chromosome to corresponding SNP IDs
-# 
-gene_ids <- expression_data$gene_id
-expression_matrix <- expression_data[, -c(1:4)]
-expression_matrix <- as.matrix(expression_matrix)
-sample_ids <- colnames(expression_matrix)
-# 
-sample_ids <- colnames(expression_matrix)
-print(sample_ids)
-#筛选显著SNPs
-gwas_data[, P := 10^(-neg_log_10_p_value)]
-significant_snps <- gwas_data[P < 5e-8]  # p 值小于 5 × 10⁻⁸
+gwas_data <- fread(file_path, sep = "\t", header = TRUE)
+# 查看数据
+str(gwas_data)
+head(gwas_data)
+colnames(gwas_data)
+#尝试1kg
+library(dplyr) 
+install.packages("readr")
+library(readr)   
+bim_dir <- "/Users/wqy/Downloads/1KG"
+colnames(gwas_data)[colnames(gwas_data) == "chromosome"] <- "CHROM"
+colnames(gwas_data)[colnames(gwas_data) == "base_pair_location"] <- "POS"
+#尝试1kg
+bim_data <- data.frame()
+for (chr in 1:22) {
+  bim_file <- file.path(bim_dir, paste0("1000G_eur_chr", chr, ".bim"))
+  if (file.exists(bim_file)) {
+    # 读取 .bim 文件
+    bim_chr <- read_table2(bim_file, col_names = c("CHROM", "rsID", "cm", "POS", "REF", "ALT"))
+    bim_data <- bind_rows(bim_data, bim_chr)
+  }
+}
+head(bim_data)
+# match
+annotated_gwas <- gwas_data %>%
+  inner_join(bim_data, by = c("CHROM", "POS"))
+head(annotated_gwas)
+write_tsv(annotated_gwas, "/Users/wqy/Downloads/annotated_gwas_data.tsv")
+#尝试1kg
 
-tnbc_snps <- significant_snps[trait == "TNBC"]
+significance_threshold <- 7.3  # 对应 p-value < 5e-8
+significant_snps <- annotated_gwas %>%
+  filter(neg_log_10_p_value >= significance_threshold)
+print(dim(significant_snps))  # 显示显著 SNP 的数量
+print(head(significant_snps)) 
+# rsID
+significant_snp_ids <- significant_snps$SNP
+write.table(significant_snp_ids, "significant_snps.txt", row.names = FALSE, col.names = FALSE, quote = FALSE)
+#图
+library(ggplot2)
+# 显著 SNP 分布图
+significant_snps <- annotated_gwas[annotated_gwas$`neg_log_10_p_value` > 7.301, ]
+ggplot(significant_snps, aes(x = CHROM, y = -log10(10^(-neg_log_10_p_value)))) +
+  geom_point(alpha = 0.6) +
+  labs(title = "Significant SNP Distribution",
+       x = "Chromosome",
+       y = "-log10(P-value)") +
+  theme_minimal()
+#图
 
-fwrite(significant_snps, file = "significant_snps.txt", sep = "\t", quote = FALSE)
-fwrite(tnbc_snps, file = "tnbc_snps.txt", sep = "\t", quote = FALSE)
-
-cat("Total significant SNPs (p < 5e-8):", nrow(significant_snps), "\n")
-cat("Total TNBC-specific SNPs:", nrow(tnbc_snps), "\n")
 
 
 ```
-```{r single cell rna-seq data}
-install.packages(c("ggplot2", "cowplot", "Matrix", "Rcpp"))
-install.packages("Seurat")
-library(Seurat)
-# 加载单细胞 RNA 测序数据
-sc_data <- Read10X(data.dir = "/Users/wqy/Downloads/GSE180878_Li_Brugge_10XscRNAseq_GeneCellMatrix_RNAcounts_human.csv")
+```{r twas}
 
-# 创建 Seurat 对象
-seurat_obj <- CreateSeuratObject(counts = sc_data, project = "TNBC", min.cells = 3, min.features = 200)
-
-# 质控：过滤低质量细胞
-seurat_obj <- subset(seurat_obj, subset = nFeature_RNA > 200 & nFeature_RNA < 2500 & percent.mt < 5)
-
-# 归一化数据
-seurat_obj <- NormalizeData(seurat_obj)
-
-# 标准化变量特征
-seurat_obj <- FindVariableFeatures(seurat_obj, selection.method = "vst", nfeatures = 2000)
 
 ```
 
