--- a/final.Rmd
+++ b/final.Rmd
@@ -1,38 +1,144 @@
 
 ```{r gwas}
 install.packages("data.table")
-install.packages("R.utils")
 library(data.table)
-library(R.utils)
-file_path <- "/Users/wqy/Downloads/GCST90454344.tsv"
-expression_data <- fread(file_path, sep = "\t", header = TRUE)
-# 
-str(expression_data)
-head(expression_data)
-colnames(expression_data)
-#map the base_pair_location and chromosome to corresponding SNP IDs
-# 
-gene_ids <- expression_data$gene_id
-expression_matrix <- expression_data[, -c(1:4)]
-expression_matrix <- as.matrix(expression_matrix)
-sample_ids <- colnames(expression_matrix)
-# 
-sample_ids <- colnames(expression_matrix)
-print(sample_ids)
-#筛选显著SNPs
-gwas_data[, P := 10^(-neg_log_10_p_value)]
-significant_snps <- gwas_data[P < 5e-8]  # p 值小于 5 × 10⁻⁸
+file_path <- "/Users/gloriaye/Desktop/dsc190/final project/GCST90454344.tsv"
+gwas_data <- fread(file_path, sep = "\t", header = TRUE)
+# 查看数据
+str(gwas_data)
+head(gwas_data)
+colnames(gwas_data)
+#尝试1kg
+library(dplyr) 
+install.packages("readr")
+library(readr)   
+bim_dir <- "/Users/gloriaye/Desktop/dsc190/13963974"
+colnames(gwas_data)[colnames(gwas_data) == "chromosome"] <- "CHROM"
+colnames(gwas_data)[colnames(gwas_data) == "base_pair_location"] <- "POS"
+#尝试1kg
+bim_data <- data.frame()
+for (chr in 1:22) {
+  bim_file <- file.path(bim_dir, paste0("1000G_eur_chr", chr, ".bim"))
+  if (file.exists(bim_file)) {
+    # 读取 .bim 文件
+    bim_chr <- read_table2(bim_file, col_names = c("CHROM", "rsID", "cm", "POS", "REF", "ALT"))
+    bim_data <- bind_rows(bim_data, bim_chr)
+  }
+}
+head(bim_data)
+# match
+annotated_gwas <- gwas_data %>%
+  inner_join(bim_data, by = c("CHROM", "POS"))
+head(annotated_gwas)
+#write_tsv(annotated_gwas, "/Users/gloriaye/Desktop/dsc190/final project")
+#尝试1kg
+```
 
-tnbc_snps <- significant_snps[trait == "TNBC"]
 
-fwrite(significant_snps, file = "significant_snps.txt", sep = "\t", quote = FALSE)
-fwrite(tnbc_snps, file = "tnbc_snps.txt", sep = "\t", quote = FALSE)
+```{r gwas}
+significance_threshold <- 7.3  # 对应 p-value < 5e-8
+significant_snps <- annotated_gwas %>%
+  filter(neg_log_10_p_value >= significance_threshold)
+print(dim(significant_snps))  # 显示显著 SNP 的数量
+print(head(significant_snps)) 
+# rsID
+significant_snp_ids <- significant_snps$SNP
+write.table(significant_snp_ids, "significant_snps.txt", row.names = FALSE, col.names = FALSE, quote = FALSE)
+#图
+library(ggplot2)
+# 显著 SNP 分布图
+significant_snps <- annotated_gwas[annotated_gwas$`neg_log_10_p_value` > 7.301, ]
+ggplot(significant_snps, aes(x = CHROM, y = -log10(10^(-neg_log_10_p_value)))) +
+  geom_point(alpha = 0.6) +
+  labs(title = "Significant SNP Distribution",
+       x = "Chromosome",
+       y = "-log10(P-value)") +
+  theme_minimal()
+#图
 
-cat("Total significant SNPs (p < 5e-8):", nrow(significant_snps), "\n")
-cat("Total TNBC-specific SNPs:", nrow(tnbc_snps), "\n")
+#rna-seq
 
+#rna-seq
 
 ```
+
+```{r}
+# Install required packages
+if (!require("BiocManager", quietly = TRUE))
+    install.packages("BiocManager")
+BiocManager::install(c("DESeq2", "biomaRt", "VariantAnnotation"))
+
+library(DESeq2)
+library(biomaRt)
+library(VariantAnnotation)
+```
+
+```{r}
+rna_counts <- fread("/Users/gloriaye/Desktop/dsc190/final project/GSE180878_Li_Brugge_10XscRNAseq_GeneCellMatrix_RNAcounts_human.csv")
+metadata <- fread("/Users/gloriaye/Desktop/dsc190/final project/GSE180878_Li_Brugge_10XscRNAseq_Metadata_human.csv")
+
+# View data structure
+print("RNA counts dimensions:")
+dim(rna_counts)
+print("\nMetadata dimensions:")
+dim(metadata)
+```
+```{r}
+# View first few rows
+print("\nFirst few rows of RNA counts:")
+head(rna_counts[, 1:5])  # Show first 5 columns only
+print("\nFirst few rows of metadata:")
+head(metadata)
+
+```
+
+```{r}
+major_subtype_counts <- table(metadata$Major.subtype)
+print("Cells per major subtype:")
+print(major_subtype_counts)
+
+# Cell subtypes summary
+cell_subtype_counts <- table(metadata$Cell.subtype)
+print("\nCells per subtype:")
+print(cell_subtype_counts)
+```
+
+```{r}
+# Create index if needed
+if (!file.exists(tbi_path)) {
+    system(paste("tabix -p vcf", vcf_path))
+}
+
+# Try reading with alternative method
+library(Rsamtools)
+
+# Try to view the first few lines of the VCF
+system(paste("zcat", vcf_path, "| head -n 20"))
+
+```
+
+```{r}
+snp_ranges <- GRanges(
+    seqnames = significant_snps$CHROM,
+    ranges = IRanges(start = significant_snps$POS, end = significant_snps$POS),
+    rsid = significant_snps$rsID
+)
+```
+
+```{r}
+vcf_data <- readVcf(vcf, "hg19", param=snp_ranges)
+
+# Create comprehensive SNP info
+snp_info <- data.frame(
+    rsID = names(vcf_data),
+    CHROM = seqnames(rowRanges(vcf_data)),
+    POS = start(rowRanges(vcf_data)),
+    REF = ref(vcf_data),
+    ALT = unlist(alt(vcf_data))
+)
+```
+
+
 ```{r single cell rna-seq data}
 install.packages(c("ggplot2", "cowplot", "Matrix", "Rcpp"))
 install.packages("Seurat")
